objects/Manufacturer__c.object
<CustomObject>
    <description>List of core manufacturer&apos;s sales tracks and their associated attributes</description>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturers_Parent_Name__c</fullName>
        <label>Manufacturers Parent Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ora_Manufacturers_Code__c</fullName>
        <label>Ora Manufacturers Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ora_Manufacturers_Parent_Code__c</fullName>
        <label>Ora Manufacturers Parent Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLX_Manufacts_CreateDate__c</fullName>
        <label>SLX Manufacts CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLX_Manufacts_ID__c</fullName>
        <label>SLX Manufacts ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Code__c</fullName>
        <label>Segment Code</label>
        <picklist>
            <picklistValues>
                <fullName>AUTG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Manufacturer</label>
    <listViews>
        <fullName>AUTG_Manufacturers</fullName>
        <columns>NAME</columns>
        <columns>Ora_Manufacturers_Code__c</columns>
        <columns>Manufacturers_Parent_Name__c</columns>
        <columns>Ora_Manufacturers_Parent_Code__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment_Code__c</field>
            <operation>equals</operation>
            <value>AUTG</value>
        </filters>
        <label>AUTG Manufacturers</label>
    </listViews>
    <listViews>
        <fullName>AllManufacturers</fullName>
        <columns>NAME</columns>
        <columns>Ora_Manufacturers_Code__c</columns>
        <columns>Manufacturers_Parent_Name__c</columns>
        <columns>Ora_Manufacturers_Parent_Code__c</columns>
        <columns>Segment_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All - Manufacturers</label>
    </listViews>
    <listViews>
        <fullName>NAATManufacturers</fullName>
        <columns>NAME</columns>
        <columns>Ora_Manufacturers_Code__c</columns>
        <columns>Manufacturers_Parent_Name__c</columns>
        <columns>Ora_Manufacturers_Parent_Code__c</columns>
        <columns>Segment_Code__c</columns>
        <columns>SLX_Manufacts_ID__c</columns>
        <columns>SLX_Manufacts_CreateDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment_Code__c</field>
            <operation>equals</operation>
            <value>NAAT</value>
        </filters>
        <label>NAAT Manufacturers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PFWManufacturers</fullName>
        <columns>NAME</columns>
        <columns>Ora_Manufacturers_Code__c</columns>
        <columns>Manufacturers_Parent_Name__c</columns>
        <columns>Ora_Manufacturers_Parent_Code__c</columns>
        <columns>Segment_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Segment_Code__c</field>
            <operation>equals</operation>
            <value>PFW</value>
        </filters>
        <label>PFW Manufacturers</label>
    </listViews>
    <nameField>
        <label>Manufacturer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>